# eas-framework

./: .c8rc.json  .eslintignore  .eslintrc  .gitignore  .gitlab-ci.yml  .mocharc.json  .npmignore  .releaserc  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  problems.js  production.tsconfig.json  tsconfig.json  vscode-profile-2021-07-11-11-56-49.cpuprofile  vscode-profile-2021-07-12-16-06-49.cpuprofile
.github/workflows/: node.js.yml  release.yml  workflow.yml
.husky/: commit-msg  pre-commit
coverage/: lcov.info
coverage/lcov-report/: index.html
coverage/tmp/: coverage-16732-1650283820510-0.json  coverage-16736-1650283820305-0.json  coverage-8820-1650276410615-0.json  coverage-8824-1650276410418-0.json
projects/check-wasm-import/: Cargo.toml  LICENSE_MIT  build.js
projects/rust-compile-template/: Cargo.toml  build.js
projects/rust-compile-template/src/: lib.rs  main.rs
projects/rust-compile-template/src/actions/: base_actions.rs  base_reader.rs
projects/rust-compile-template/src/better_string/: b_string.rs  r_string.rs  u_string.rs
projects/rust-compile-template/src/ejs/: builder.rs  ejs_syntax.rs
projects/rust-compile-template/src/page_base/: mod.rs  parser.rs
projects/rust-compile-template/src/razor/: builder.rs  mini_razor.rs  mod.rs  razor_syntax.rs
projects/rust-compile-template/tests/: ejs.rs  html_attr.rs  razor.rs  razor_min.rs
projects/rust-compile-template/tests/texts/: big.html  html_attr.html  page_base.html  razor.html  razor_compile.html  razor_min.html
projects/rust-compile-wasm/: Cargo.toml  build.js
projects/swc-dynamic-imports/: Cargo.toml  build.js  package.json
projects/swc-dynamic-imports/src/: create_exports.rs  dynamic.rs  exports.rs  imports.rs  lib.rs  main.rs  utils.rs  visitor.rs
projects/swc-dynamic-imports/tests/: import.rs
scripts/: build.js
src/: index.ts  redirectCJS.js
src-old/: index.ts
src-old/CompileCode/: CssMinimizer.ts  Events.ts  InsertModels.ts  JSParser.ts  Session.ts
src-old/EasyDebug/: SourceMapLoad.ts  SourceMapStore.ts  StringTracker.ts
src-old/Global/: Index.ts  SearchRecord.ts  localSql.ts
src-old/ImportFiles/: Script.ts
src-old/MainBuild/: ListenGreenLock.ts  Types.ts
src-old/OutputInput/: Logger.ts  StoreDeps.ts
src-old/Plugins/: HTTP.ts
src-old/RunTimeBuild/: CompileState.ts  DataWriter.ts  SearchFileSystem.ts  SearchPages.ts
src-old/StringMethods/: Id.ts  Splitting.ts
src-old/scripts/: build-scripts.ts  (+1 more)
tests/: compile.js
(+792 files in other folders)
